--- a/HintRank/Demo.ipynb
+++ b/HintRank/Demo.ipynb
@@ -61,7 +61,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "### Pairwise Hint Comparison\\n\n",
+    "### Pairwise Hint Comparison\n",
     "This cell defines a question, an answer, and a set of hints.\n",
     "It then compares two hints to determine which one is better based on:\n",
     "- Answer-aware comparison (considers the answer when ranking hints).\n",
