--- a/HintRank/Demo.ipynb
+++ b/HintRank/Demo.ipynb
@@ -64,8 +64,8 @@
     "### Pairwise Hint Comparison\n",
     "This cell defines a question, an answer, and a set of hints.\n",
     "It then compares two hints to determine which one is better based on:\n",
-    "- Answer-aware comparison (considers the answer when ranking hints).\n",
-    "- Answer-agnostic comparison (ranks hints without considering the answer)."
+    "- **Answer-aware comparison:** Considers the answer when ranking hints).\n",
+    "- **Answer-agnostic comparison:** Ranks hints without considering the answer)."
    ]
   },
   {
@@ -76,7 +76,7 @@
     "hints = [\n",
     "    \"Mozart and Beethoven once lived here.\",\n",
     "    \"It is a big city in Europe.\",\n",
-    "    \"Austria’s largest city and capital.\"\n",
+    "    \"Austria’s largest city.\"\n",
     "]\n",
     "\n",
     "# Pairwise Comparison Example\n",
